--- a/s-funil/index.html
+++ b/s-funil/index.html
@@ -127,7 +127,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 
 
     <!-- iframe que muestra el contenido del enlace proporcionado -->
-    <iframe src="https://viewer-production-a390.up.railway.app/s-funil"></iframe>
+    <iframe src="https://app.typezinjb.store/s-funil"></iframe>
 
 		</div>
 				</div>
@@ -156,7 +156,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
         var utmParams = getUTMParameters();
         var iframe = document.querySelector('iframe'); // Altere se necessário para selecionar o iframe correto
         if (iframe) {
-            var originalSrc = 'https://viewer-production-a390.up.railway.app/s-funil';
+            var originalSrc = 'https://app.typezinjb.store/s-funil';
             var newSrc = originalSrc;
             var hasParams = false;
 
